home page redesign

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Custome CSS File -->
   <link rel="stylesheet" href="assets/css/custom.css">
@@ -42,7 +44,8 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+  <div class="fixed-top">
+    <!-- ======= Header ======= -->
     <div class="top-header p-4">
       <div class="container">
         <div class="row d-flex align-items-center justify-content-evenly">
@@ -59,85 +62,86 @@
       </div>
     </div>
 
-  <header id="header" class="d-flex align-items-center" style="background-color: #000; color: #ffffff;">
-    <div class="container d-flex justify-content-center">
+    <header id="header" class="d-flex align-items-center" style="background-color: #000; color: #ffffff;">
+      <div class="container d-flex justify-content-center">
 
-      <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
+        <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
             Digital</span><span class="green"> Signage</span> </a></h1> -->
-      <!-- <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1> -->
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <!-- <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1> -->
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <!-- <li><a href="index.html" class="active">Home</a></li> -->
+        <nav id="navbar" class="navbar">
+          <ul>
+            <!-- <li><a href="index.html" class="active">Home</a></li> -->
 
-          <li class="dropdown"><a class="active" href="#"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
+            <li class="dropdown"><a class="active" href="#"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
 
-              <li><a href="about.html">Welcome/About </a></li>
-              <li><a href="#">How it works</a></li>
-              <li><a href="#">Features</a></li>
-              <li><a href="#">What we do</a></li>
-              <li><a href="#">Customers/Our work</a></li>
-              <li><a href="#">Solutions/ Industries</a></li>
-              <li><a href="#">Contents Editing</a></li>
-              <li><a href="#">Screens / Players
-                  Ready to learn more / Contact us
-                </a></li>
-            </ul>
-          </li>
+                <li><a href="about.html">Welcome/About </a></li>
+                <li><a href="#">How it works</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">What we do</a></li>
+                <li><a href="#">Customers/Our work</a></li>
+                <li><a href="#">Solutions/ Industries</a></li>
+                <li><a href="#">Contents Editing</a></li>
+                <li><a href="#">Screens / Players
+                    Ready to learn more / Contact us
+                  </a></li>
+              </ul>
+            </li>
 
-          <li class="dropdown"><a href="#"><span>Sector/Solutions</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="retail.html">Retail</a></li>
-              <li><a href="restaurants.html">Bar / Restaurants</a></li>
-              <li><a href="hotels.html">Hotels</a></li>
-              <li><a href="education.html">Education</a></li>
-              <li><a href="bank.html">Banks </a></li>
-              <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
-              <li><a href="travel-agent.html">Travel Agent </a></li>
-              <li><a href="hospitals.html">Hospitals</a></li>
-              <li><a href="car-show.html">Car Show </a></li>
-              <li><a href="gym.html">Gym / Fitness Centres</a></li>
-              <li><a href="#">Airport</a></li>
-              <li><a href="event-places.html">Event places </a></li>
-              <li><a href="government-institutions.html">Government institutions </a></li>
-              <li><a href="stadium.html">Stadium's</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="bus-shelter.html">Bus Shelter</a></li>
-              <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
-              <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
-              <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
-              <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
-              <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
-              <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
-              <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
-              <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
-              <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
-              <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
-              <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
-              <li><a href="#">Outdoor LED Display</a></li>
-              <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
-              <li><a href="windvane.html">Windvane</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Case Studies</a></li>
-          <li><a href="#">Rentals</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <!-- <li><a href="blog.html">Blog</a></li> -->
+            <li class="dropdown"><a href="#"><span>Sector/Solutions</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+                <li><a href="retail.html">Retail</a></li>
+                <li><a href="restaurants.html">Bar / Restaurants</a></li>
+                <li><a href="hotels.html">Hotels</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="bank.html">Banks </a></li>
+                <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
+                <li><a href="travel-agent.html">Travel Agent </a></li>
+                <li><a href="hospitals.html">Hospitals</a></li>
+                <li><a href="car-show.html">Car Show </a></li>
+                <li><a href="gym.html">Gym / Fitness Centres</a></li>
+                <li><a href="#">Airport</a></li>
+                <li><a href="event-places.html">Event places </a></li>
+                <li><a href="government-institutions.html">Government institutions </a></li>
+                <li><a href="stadium.html">Stadium's</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+                <li><a href="bus-shelter.html">Bus Shelter</a></li>
+                <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
+                <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
+                <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
+                <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
+                <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
+                <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
+                <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
+                <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
+                <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
+                <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
+                <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
+                <li><a href="#">Outdoor LED Display</a></li>
+                <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
+                <li><a href="windvane.html">Windvane</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Case Studies</a></li>
+            <li><a href="#">Rentals</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <!-- <li><a href="blog.html">Blog</a></li> -->
 
-          <li><a href="contact.html">Contact Us</a></li>
-          <!-- <li><a href="index.html" class="getstarted">Get Started</a></li> -->
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+            <li><a href="contact.html">Contact Us</a></li>
+            <!-- <li><a href="index.html" class="getstarted">Get Started</a></li> -->
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
 
-    </div>
-  </header><!-- End Header -->
+      </div>
+    </header><!-- End Header -->
+  </div>
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
@@ -149,11 +153,12 @@
 
         <!-- Slide 1 -->
         <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-a.png)">
-          <div class="carousel-container">
-            <div class="container">
-              <h2 class="animate__animated animate__fadeInDown"><span class="red">AFLAX: RETAIL</span> <br> PUT YOUR
+          <div class="carousel-container mt-5">
+            <div class="container mt-5">
+              <h2 class="animate__animated animate__fadeInDown mt-5">
+                <span class="red">AFLAX: RETAIL</span> <br> PUT YOUR
                 CUSTOMERS IN THE MOOD TO BUY</h2>
-              <p class="animate__animated animate__fadeInUp">Create a fully-branded in-store experience that drives
+              <p class="animate__animated animate__fadeInUp mt-5">Create a fully-branded in-store experience that drives
                 lasting results by creating an Interactive Customer Experience with Aflax Digital Signage. For retailers
                 looking for something special, we offer a range of innovative digital signage retail solutions to make
                 your store stand out. to buy again and again.</p>
@@ -164,11 +169,11 @@
 
         <!-- Slide 2 -->
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-b.jpg)">
-          <div class="carousel-container">
-            <div class="container">
-              <h2 class="animate__animated animate__fadeInDown"><span class="orange">AFLAX: RESTAURANTS</span> <br>
+          <div class="carousel-container mt-5">
+            <div class="container mt-5">
+              <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: RESTAURANTS</span> <br>
                 COMPLETE THE DINING EXPERIENCE</h2>
-              <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement
+              <p class="animate__animated animate__fadeInUp mt-5">For a restaurant, the right sights and sounds complement
                 great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs
                 and content using our cloud software. It’s all on the menu.</p>
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
@@ -178,11 +183,11 @@
 
         <!-- Slide 3 -->
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-c.jpg)">
-          <div class="carousel-container">
-            <div class="container">
-              <h2 class="animate__animated animate__fadeInDown"><span class="green">AFLAX: HEALTHCARE</span> <br>DELIVER
+          <div class="carousel-container mt-5">
+            <div class="container mt-5">
+              <h2 class="animate__animated animate__fadeInDown mt-5"><span class="green">AFLAX: HEALTHCARE</span> <br>DELIVER
                 A HEALTHY DOSE OF MUSIC – AND MORE</h2>
-              <p class="animate__animated animate__fadeInUp">Creating a comfortable experience and operating an
+              <p class="animate__animated animate__fadeInUp mt-5">Creating a comfortable experience and operating an
                 efficient practice are the keys to a high level of patient care. With Aflax’s proven healthcare
                 solutions, you’ll provide a soothing and welcoming environment for your patients. Bundle solutions to
                 reduce overhead costs for maximum ROI.</p>
@@ -193,12 +198,12 @@
 
         <!-- Slide 4 -->
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-d.jpg)">
-          <div class="carousel-container">
-            <div class="container">
-              <h2 class="animate__animated animate__fadeInDown"><span class="red">AFLAX: CONVENIENCE STORE</span>
+          <div class="carousel-container mt-5">
+            <div class="container mt-5">
+              <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: CONVENIENCE STORE</span>
                 <br>BRING CUSTOMERS BACK WITH Aflax Digital Signage
               </h2>
-              <p class="animate__animated animate__fadeInUp">Bringing customers back is all about meeting expectations
+              <p class="animate__animated animate__fadeInUp mt-5">Bringing customers back is all about meeting expectations
                 and delivering a consistent experience. With our affordable and proven solutions, you’ll drive in-store
                 traffic and build lasting customer loyalty for the repeat business that convenience stores rely on.
                 Promote high-margin items and drive traffic in-store with Pumpside Messaging. Turnkey programmes
@@ -211,11 +216,11 @@
 
         <!-- Slide 5 -->
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-c.jpg)">
-          <div class="carousel-container">
-            <div class="container">
-              <h2 class="animate__animated animate__fadeInDown"><span class="orange">AFLAX: HOSPITALITY</span> <br>PUT
+          <div class="carousel-container mt-5">
+            <div class="container mt-5">
+              <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: HOSPITALITY</span> <br>PUT
                 THEM IN THE MOOD TO STAY</h2>
-              <p class="animate__animated animate__fadeInUp">Guests are always coming and going. Entice them to come
+              <p class="animate__animated animate__fadeInUp mt-5">Guests are always coming and going. Entice them to come
                 back again and again by creating an engaging, multi-sensory experience they’ll never forget. Whatever
                 your style – boutique, extended stay, or full service – the right audio, visuals and scent can work
                 together to set the distinct mood that speaks to your brand and your clientele, ensuring lasting guest
@@ -227,13 +232,13 @@
 
       </div>
 
-      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+      <!-- <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
       </a>
 
       <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-      </a>
+      </a> -->
 
     </div>
   </section><!-- End Hero -->
