--- a/retail.html
+++ b/retail.html
@@ -169,13 +169,13 @@
 
         </div>
 
-        <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+        <!-- <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
         </a>
 
         <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
           <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-        </a>
+        </a> -->
 
       </div>
     </section><!-- End Hero -->
@@ -540,36 +540,36 @@
     <!-- ======= Start Features Section ======= -->
     <div class="feature mt-5 white-smoke">
       <div class="container">
-        <div class="row content text-center">
-          <h2 class="mt-5" >FEATURES</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas non repudiandae atque at, perspiciatis
+        <div class="row content">
+          <h2 class="text-center mt-5">FEATURES</h2>
+          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas non repudiandae atque at, perspiciatis
             recusandae sequi iure doloremque dicta dolorem!</p>
           <br>
           <br>
           <br>
           <div class="row">
-            <div class="col-md-2 offset-md-1">
+            <div class="col-md-2 offset-md-1 bg-white shadow m-5 p-2">
               <img width="80" height="80" src="assets/img/features/setup.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Simple Setup</b></h6>
               <p>No software to download. No Servers, Cloud-based application. Set up and running in minutes.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 bg-white shadow m-5 p-2">
               <img width="80" height="80" src="assets/img/features/no-hardware.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Little or No Hardware</b></h6>
               <p>Choose from a variety of players options including emended signage solutions called system-on-chip</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 bg-white shadow m-5 p-2">
               <img width="80" height="80" src="assets/img/features/content2.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Easy Content Creation</b></h6>
               <p>Easily access eye-catching animations and interactive content with Aflax Signage Creator.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 bg-white shadow m-5 p-2">
               <img width="80" height="80" src="assets/img/features/screen.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -577,24 +577,17 @@
               <p>From shelf edge to 4k video, Aflax digital signage makes it easy to build high-definition video walls
                 of virtually any size or orientation.</p>
             </div>
-            <div class="col-md-2">
-              <img width="80" height="80" src="assets/img/features/global.png" alt="" class="img-fluid">
-              <br>
-              <br>
-              <h6><b>Deploy content Globally </b></h6>
-              <p>Deploy different content across the globe in just one click with Aflax digital signage Director.</p>
-            </div>
           </div>
 
           <div class="row">
-            <div class="col-md-2 offset-md-1">
+            <div class="col-md-2 offset-md-1 bg-white shadow m-5 p-2">
               <img width="80" height="80" src="assets/img/features/calendar.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Schedules and Campaigns</b></h6>
               <p>Schedule content changes in advance which can include seasonal or promotional campaigns.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 bg-white shadow m-5 p-2">
               <img width="80" height="80" src="assets/img/features/interactive.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -602,28 +595,20 @@
               <p>From interactive kiosks to tablet application, Aflax digital signage makes it easy to build interactive
                 experiences.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 bg-white shadow m-5 p-2">
               <img width="80" height="80" src="assets/img/features/photoshop.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Imprt Designs from Photoshop</b></h6>
               <p>Adobe users are able to upload and edit their designs layer by layer as displayed in photoshop.</p>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 bg-white shadow m-5 p-2">
               <img width="80" height="80" src="assets/img/features/data.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>External Data feed Triggers </b></h6>
               <p>From weather to audience measurement data, Aflax digital signage makes it easy to content external
                 triggers to truly converse with individuals.</p>
-            </div>
-            <div class="col-md-2">
-              <img width="80" height="80" src="assets/img/features/sensor.png" alt="" class="img-fluid">
-              <br>
-              <br>
-              <h6><b>Adding Sensor Devices</b></h6>
-              <p>From product located touch sensors to Lift ‘n’ Learn applications, Aflax digital signage makes it easy
-                to build interactive experiences.</p>
             </div>
           </div>
         </div>
