retail page updated

--- a/retail.html
+++ b/retail.html
@@ -40,87 +40,104 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center">
-    <div class="container d-flex align-items-center">
-
-      <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
-            Digital</span><span class="green"> Signage</span> </a></h1> -->
-      <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img
-            src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
-      <nav id="navbar" class="navbar">
-        <ul>
-          <!-- <li><a href="index.html" class="active">Home</a></li> -->
-
-          <li class="dropdown"><a class="active" href="#"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-
-              <li><a href="about.html">Welcome/About </a></li>
-              <li><a href="#">How it works</a></li>
-              <li><a href="#">Features</a></li>
-              <li><a href="#">What we do</a></li>
-              <li><a href="#">Customers/Our work</a></li>
-              <li><a href="#">Solutions/ Industries</a></li>
-              <li><a href="#">Contents Editing</a></li>
-              <li><a href="#">Screens / Players
-                  Ready to learn more / Contact us
-                </a></li>
-            </ul>
-          </li>
-
-          <li class="dropdown"><a href="#"><span>Sector/Solutions</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="retail.html">Retail</a></li>
-              <li><a href="restaurants.html">Bar / Restaurants</a></li>
-              <li><a href="hotels.html">Hotels</a></li>
-              <li><a href="education.html">Education</a></li>
-              <li><a href="bank.html">Banks </a></li>
-              <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
-              <li><a href="travel-agent.html">Travel Agent </a></li>
-              <li><a href="hospitals.html">Hospitals</a></li>
-              <li><a href="car-show.html">Car Show </a></li>
-              <li><a href="gym.html">Gym / Fitness Centres</a></li>
-              <li><a href="#">Airport</a></li>
-              <li><a href="event-places.html">Event places </a></li>
-              <li><a href="government-institutions.html">Government institutions </a></li>
-              <li><a href="stadium.html">Stadium's</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="bus-shelter.html">Bus Shelter</a></li>
-              <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
-              <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
-              <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
-              <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
-              <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
-              <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
-              <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
-              <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
-              <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
-              <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
-              <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
-              <li><a href="#">Outdoor LED Display</a></li>
-              <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
-              <li><a href="windvane.html">Windvane</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Case Studies</a></li>
-          <li><a href="#">Rentals</a></li>
-          <li><a href="#">Contact</a></li>
-          <!-- <li><a href="blog.html">Blog</a></li> -->
-
-          <li><a href="#">Contact Us</a></li>
-          <!-- <li><a href="index.html" class="getstarted">Get Started</a></li> -->
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
+  <div class="fixed-top">
+    <!-- ======= Header ======= -->
+    <div class="top-header p-4">
+      <div class="container">
+        <div class="row d-flex align-items-center justify-content-evenly">
+          <div class="col-md-4 text-center p-2">
+            <h5><i class="far fa-envelope"></i> mail@gmail.com</h5>
+          </div>
+          <div class="col-md-4 text-center p-2">
+            <a href="index.html"><img style="height: 100px;" class="img-fluid" src="assets/img/logo/aflaxdigitalsignagelogowhite.png"></a>
+          </div>
+          <div class="col-md-4 text-center p-2">
+            <h5><i class="fas fa-phone-square-alt"></i>+8888888888</h5>
+          </div>
+        </div>
+      </div>
     </div>
-  </header><!-- End Header -->
+
+    <header id="header" class="d-flex align-items-center" style="background-color: #000; color: #ffffff;">
+      <div class="container d-flex justify-content-center">
+
+        <!-- <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
+            Digital</span><span class="green"> Signage</span> </a></h1> -->
+        <!-- <h1 class="logo me-auto"><a href="index.html" class="logo me-auto"><img src="assets/img/logo/aflaxdigitalsignagelogowhite.png" alt="" class="img-fluid"></a></h1> -->
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+        <nav id="navbar" class="navbar">
+          <ul>
+            <!-- <li><a href="index.html" class="active">Home</a></li> -->
+
+            <li class="dropdown"><a class="active" href="#"><span>Home</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+
+                <li><a href="about.html">Welcome/About </a></li>
+                <li><a href="#">How it works</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">What we do</a></li>
+                <li><a href="#">Customers/Our work</a></li>
+                <li><a href="#">Solutions/ Industries</a></li>
+                <li><a href="#">Contents Editing</a></li>
+                <li><a href="#">Screens / Players
+                    Ready to learn more / Contact us
+                  </a></li>
+              </ul>
+            </li>
+
+            <li class="dropdown"><a href="#"><span>Sector/Solutions</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+                <li><a href="retail.html">Retail</a></li>
+                <li><a href="restaurants.html">Bar / Restaurants</a></li>
+                <li><a href="hotels.html">Hotels</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="bank.html">Banks </a></li>
+                <li><a href="mall-supermarket.html">Malls & Supermarket</a></li>
+                <li><a href="travel-agent.html">Travel Agent </a></li>
+                <li><a href="hospitals.html">Hospitals</a></li>
+                <li><a href="car-show.html">Car Show </a></li>
+                <li><a href="gym.html">Gym / Fitness Centres</a></li>
+                <li><a href="#">Airport</a></li>
+                <li><a href="event-places.html">Event places </a></li>
+                <li><a href="government-institutions.html">Government institutions </a></li>
+                <li><a href="stadium.html">Stadium's</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+                <li><a href="bus-shelter.html">Bus Shelter</a></li>
+                <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
+                <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
+                <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
+                <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
+                <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
+                <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
+                <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
+                <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
+                <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
+                <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
+                <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
+                <li><a href="#">Outdoor LED Display</a></li>
+                <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
+                <li><a href="windvane.html">Windvane</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Case Studies</a></li>
+            <li><a href="#">Rentals</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <!-- <li><a href="blog.html">Blog</a></li> -->
+
+            <li><a href="contact.html">Contact Us</a></li>
+            <!-- <li><a href="index.html" class="getstarted">Get Started</a></li> -->
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
+
+      </div>
+    </header><!-- End Header -->
+  </div>
 
   <main id="main">
 
@@ -137,7 +154,7 @@
             style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">
+                <h2 class="animate__animated animate__fadeInDown mt-5">
                   Are you looking to create a dynamic in-store experience with Digital Store Signage?
                 </h2>
               </div>
@@ -149,7 +166,7 @@
             style="background-image: url(assets/img/retail/cover_image_1613400805.jpg.760x400_q85_crop_upscale.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">
+                <h2 class="animate__animated animate__fadeInDown mt-5">
                   Aflax will provide you with a solution that promises to increase customer engagement and boost sales.
                 </h2>
               </div>
@@ -160,7 +177,7 @@
           <div class="carousel-item" style="background-image: url(assets/img/retail/DS-1024x812.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Put your
+                <h2 class="animate__animated animate__fadeInDown mt-5">Put your
                   customers in the mood to buy.
                 </h2>
               </div>
@@ -542,7 +559,8 @@
       <div class="container">
         <div class="row content">
           <h2 class="text-center mt-5">FEATURES</h2>
-          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas non repudiandae atque at, perspiciatis
+          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas non repudiandae atque
+            at, perspiciatis
             recusandae sequi iure doloremque dicta dolorem!</p>
           <br>
           <br>
